--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     ,Best eBooks,PDF eBooks,ePub eBooks,Buy eBooks online,eBook formats,Online eBook platform,eBook reading apps
   ,Convert eBooks to PDF, eBook subscription,Affordable eBooks,eBook categories,Self-publishing eBooks, Educational eBooks
     " />
-    <title>Readly </title>
+    <title>Thebookverse </title>
     
     <script type='text/javascript' src='//pl24963153.profitablecpmrate.com/55/d4/17/55d417ba01c3415c76081909781cc74a.js'></script>
     
